# crossword_zero_to_hero

./: .gitignore  package-lock.json  package.json
contract/: Cargo.toml
contract/src/: lib.rs
frontend/: App.js  index.html
frontend/assets/css/: global.css
frontend/assets/js/near/: config.js  utils.js
