[package]
name = "greeter"
version = "1.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[lib]
 crate-type = ["cdylib"]
# crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
hex = "0.4.3"
uint = { version = "0.9.3", default-features = false }

[dev-dependencies]
pretty_assertions = "1.2.1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
